--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,127 @@
-.App {
-  text-align: center;
+* {
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  background-color: #f3f5f5;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+h1 {
+  font-size: 32px;
+  font-weight: bold;
+  margin-bottom: 30px;
+}
+
+h2 {
+  font-size: 24px;
+  line-height: 20px;
+  font-weight: bold;
+  margin: 20px 0;
+}
+
+h3 {
+  font-size: 18px;
+  line-height: 16px;
+  margin-bottom: 5px;
+}
+
+/* HEADER */
+
+header {
   display: flex;
   flex-direction: column;
+  background-color: white;
+}
+
+.top-bar {
+  height: 60px;
+  width: 100vw;
+  border-bottom: 1px solid #e9ebeb;
+}
+
+.top-bar .container {
+  height: 60px;
+  display: flex;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.top-bar .container img {
+  height: 70%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.restaurant-infos {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 30px 0;
+}
+
+.restaurant-text {
+  width: 65%;
+}
+
+.restaurant-text p {
+  color: #868a8a;
+  font-size: 19px;
+  line-height: 29px;
+}
+
+.restaurant-infos img {
+  width: 30%;
+  border-radius: 10px;
+}
+
+/* MAIN */
+
+section {
+  max-width: 68%;
+  display: flex;
+  flex-direction: column;
+}
+
+.menus {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.menu-item {
+  height: 160px;
+  width: calc((100% - 10px) / 2);
+  display: flex;
+  justify-content: space-between;
+  background-color: white;
+  padding: 10px;
+  margin-bottom: 10px;
+  border-radius: 15px;
+}
+
+.menu-item:nth-child(2n) {
+  margin-left: 10px;
+}
+
+.menu-info {
+  display: flex;
+  flex-direction: column;
+}
+
+.menu-item-img {
+  height: 130px;
+  width: 130px;
+  margin-left: 10px;
+}
+
+.menu-item-img img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  position: center;
+  border-radius: 5px;
 }
