--- a/src/App.css
+++ b/src/App.css
@@ -43,7 +43,7 @@ header {
 
 .top-bar {
   height: 60px;
-  width: 100vw;
+  width: 100%;
   border-bottom: 1px solid #e9ebeb;
 }
 
@@ -82,7 +82,7 @@ header {
 /* MAIN */
 
 section {
-  max-width: 68%;
+  max-width: 100%;
   display: flex;
   flex-direction: column;
 }
@@ -101,10 +101,16 @@ section {
   padding: 15px;
   margin-bottom: 15px;
   border-radius: 15px;
+  cursor: pointer;
+  transition-duration: 0.3s;
 }
 
 .menu-item:nth-child(2n) {
   margin-left: 15px;
+}
+
+.menu-item:hover {
+  box-shadow: 0 12px 24px 0 rgba(46, 51, 51, 0.07);
 }
 
 .menu-info {
@@ -130,4 +136,89 @@ section {
 .menu-description {
   margin-bottom: 10px;
   color: #868a8a;
+  height: 38px;
+  overflow: hidden;
+  line-height: 18px;
+}
+
+.price-popular {
+  display: flex;
+}
+
+.menu-price {
+  font-size: 18px;
+  color: #868a8a;
+}
+
+.price-popular span {
+  margin-left: 10px;
+  color: #ff8000;
+  font-weight: bold;
+}
+
+.price-popular span svg {
+  margin-right: 5px;
+  color: #ff8000;
+  font-weight: bold;
+}
+
+footer {
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+footer a {
+  text-decoration: none;
+  color: #ff8000;
+}
+
+/* MEDIA Q */
+
+@media (max-width: 1200px) {
+  .container {
+    padding: 10px;
+  }
+}
+
+@media (max-width: 885px) {
+  h1 {
+    font-size: 22px;
+  }
+
+  .restaurant-infos {
+    flex-direction: column-reverse;
+    padding: 0;
+  }
+
+  .restaurant-infos img {
+    width: 100%;
+    height: 220px;
+    object-fit: cover;
+    position: center;
+    border-radius: 0;
+    margin-bottom: 20px;
+  }
+
+  .restaurant-text {
+    width: 100%;
+    padding: 30px;
+  }
+
+  .restaurant-text p {
+    font-size: 16px;
+  }
+
+  .menus {
+    flex-direction: column;
+  }
+
+  .menu-item {
+    width: 100%;
+  }
+
+  .menu-item:nth-child(2n) {
+    margin-left: 0;
+  }
 }
