--- a/src/App.css
+++ b/src/App.css
@@ -75,11 +75,20 @@ header {
 }
 
 .restaurant-infos img {
-  width: 30%;
+  width: 360px;
   border-radius: 10px;
 }
 
 /* MAIN */
+
+main {
+  display: flex;
+}
+
+.categories {
+  width: calc((100% - 15px) - 360px);
+  margin-right: 15px;
+}
 
 section {
   max-width: 100%;
@@ -162,11 +171,75 @@ section {
   font-weight: bold;
 }
 
+/* ASIDE */
+
+.cart-container {
+  width: 360px;
+  height: 300px;
+  position: sticky;
+  top: 0;
+}
+
+.cart {
+  margin: 30px 0;
+  padding: 10px;
+  box-shadow: 0 12px 24px 0 rgba(46, 51, 51, 0.07);
+  border-radius: 15px;
+  background-color: white;
+}
+
+.cart-info {
+  display: flex;
+  flex-direction: column;
+}
+
+.cart-item {
+  display: flex;
+  padding: 10px 0;
+}
+
+.quantity {
+  display: flex;
+  align-items: center;
+  height: 20px;
+  margin-right: 10px;
+}
+
+.cart-line {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.cart-title {
+  width: 70%;
+}
+
+.cart-result {
+  border-top: 1px solid red;
+  border-bottom: 1px solid red;
+}
+
+.cart-result div,
+.total {
+  margin: 15px 0;
+}
+
+.subtotal,
+.service,
+.total {
+  display: flex;
+  justify-content: space-between;
+}
+
+/* FOOTER */
+
 footer {
   height: 50px;
   display: flex;
   justify-content: center;
   align-items: center;
+  text-align: center;
 }
 
 footer a {
@@ -175,12 +248,6 @@ footer a {
 }
 
 /* MEDIA Q */
-
-@media (max-width: 1200px) {
-  .container {
-    padding: 10px;
-  }
-}
 
 @media (max-width: 885px) {
   h1 {
