--- a/src/App.css
+++ b/src/App.css
@@ -184,13 +184,48 @@ section {
   margin: 30px 0;
   padding: 10px;
   box-shadow: 0 12px 24px 0 rgba(46, 51, 51, 0.07);
-  border-radius: 15px;
+  border-radius: 10px;
   background-color: white;
 }
 
 .cart-info {
   display: flex;
   flex-direction: column;
+  font-size: 17px;
+}
+
+.validate {
+  background-color: #00cdbd;
+  font-size: 18px;
+  height: 50px;
+  margin-bottom: 15px;
+  font-weight: bold;
+  border: none;
+  color: white;
+  border-radius: 8px;
+  cursor: pointer;
+  transition-duration: 300ms;
+}
+
+.validate:hover {
+  opacity: 0.8;
+}
+
+.disable {
+  background-color: lightgray;
+  cursor: not-allowed;
+}
+
+.disable:hover {
+  opacity: 1;
+}
+
+.empty {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 16px;
+  height: 100px;
 }
 
 .cart-item {
@@ -205,9 +240,25 @@ section {
   margin-right: 10px;
 }
 
+.quantity p {
+  width: 22px;
+  text-align: center;
+}
+
+.quantity button {
+  background-color: #00cdbd;
+  border: none;
+  color: white;
+  width: 18px;
+  height: 18px;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
 .cart-line {
   display: flex;
   justify-content: space-between;
+  align-items: flex-start;
   width: 100%;
 }
 
@@ -216,8 +267,8 @@ section {
 }
 
 .cart-result {
-  border-top: 1px solid red;
-  border-bottom: 1px solid red;
+  border-top: 1px solid #f3f5f5;
+  border-bottom: 1px solid #f3f5f5;
 }
 
 .cart-result div,
@@ -230,6 +281,10 @@ section {
 .total {
   display: flex;
   justify-content: space-between;
+}
+
+.total {
+  font-weight: bold;
 }
 
 /* FOOTER */
@@ -249,6 +304,26 @@ footer a {
 
 /* MEDIA Q */
 
+@media (max-width: 1220px) {
+  .container {
+    padding: 0 10px;
+  }
+
+  .restaurant-infos img {
+    margin: 20px 0 20px 20px;
+  }
+}
+
+@media (max-width: 1125px) {
+  .menu-item {
+    width: 100%;
+  }
+
+  .menu-item:nth-child(2n) {
+    margin-left: 0;
+  }
+}
+
 @media (max-width: 885px) {
   h1 {
     font-size: 22px;
@@ -266,6 +341,7 @@ footer a {
     position: center;
     border-radius: 0;
     margin-bottom: 20px;
+    margin: 0;
   }
 
   .restaurant-text {
