--- a/src/App.css
+++ b/src/App.css
@@ -33,6 +33,10 @@ h3 {
   margin-bottom: 10px;
 }
 
+.visible {
+  display: flex;
+}
+
 /* HEADER */
 
 header {
@@ -175,7 +179,7 @@ section {
 
 .cart-container {
   width: 360px;
-  height: 300px;
+  height: 100%;
   position: sticky;
   top: 0;
 }
@@ -194,6 +198,10 @@ section {
   font-size: 17px;
 }
 
+.mini-cart-info {
+  display: none;
+}
+
 .validate {
   background-color: #00cdbd;
   font-size: 18px;
@@ -209,6 +217,14 @@ section {
 
 .validate:hover {
   opacity: 0.8;
+}
+
+.validate-mini {
+  display: none;
+}
+
+.validate-mini-disable {
+  display: none;
 }
 
 .disable {
@@ -264,6 +280,7 @@ section {
 
 .cart-title {
   width: 70%;
+  line-height: 20px;
 }
 
 .cart-result {
@@ -285,6 +302,14 @@ section {
 
 .total {
   font-weight: bold;
+}
+
+.showCart {
+  display: none;
+}
+
+.close {
+  display: none;
 }
 
 /* FOOTER */
@@ -363,5 +388,84 @@ footer a {
 
   .menu-item:nth-child(2n) {
     margin-left: 0;
+  }
+}
+
+@media (max-width: 770px) {
+  main {
+    flex-direction: column;
+  }
+
+  .categories {
+    width: 100%;
+  }
+
+  .cart-container {
+    width: 100%;
+  }
+
+  .cart {
+    width: 95vw;
+    position: fixed;
+    bottom: 0;
+    margin: 0;
+    background-color: white;
+    box-shadow: 0 -12px 24px 0 rgba(46, 51, 51, 0.07);
+  }
+
+  .cart-info {
+    display: none;
+  }
+
+  .mini-cart-info {
+    display: block;
+  }
+
+  .validate {
+    display: none;
+  }
+
+  .validate-mini-disable {
+    width: 100%;
+    background-color: lightgray;
+    cursor: not-allowed;
+    font-size: 18px;
+    height: 50px;
+    margin-bottom: 15px;
+    font-weight: bold;
+    border: none;
+    color: white;
+    border-radius: 8px;
+    cursor: not-allowed;
+    display: inline;
+  }
+
+  .showCart,
+  .validate-mini {
+    width: 100%;
+    padding: 15px;
+    display: flex;
+    text-align: center;
+    background-color: rgb(89, 22, 89);
+    color: white;
+    border: none;
+    font-size: 18px;
+    cursor: pointer;
+  }
+
+  .showCart {
+    justify-content: space-between;
+  }
+
+  .validate-mini {
+    justify-content: center;
+  }
+
+  .close {
+    display: block;
+    width: 100%;
+    text-align: right;
+    font-size: 20px;
+    cursor: pointer;
   }
 }
