--- a/src/App.css
+++ b/src/App.css
@@ -411,6 +411,9 @@ footer a {
     margin: 0;
     background-color: white;
     box-shadow: 0 -12px 24px 0 rgba(46, 51, 51, 0.07);
+    max-height: 80vh;
+    overflow: hidden;
+    overflow-y: auto;
   }
 
   .cart-info {
