--- a/src/App.css
+++ b/src/App.css
@@ -149,8 +149,6 @@ section {
 .menu-description {
   margin-bottom: 10px;
   color: #868a8a;
-  height: 38px;
-  overflow: hidden;
   line-height: 18px;
 }
 
@@ -315,7 +313,7 @@ section {
 /* FOOTER */
 
 footer {
-  height: 50px;
+  height: 75px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -402,18 +400,20 @@ footer a {
 
   .cart-container {
     width: 100%;
+    z-index: 1;
   }
 
   .cart {
-    width: 95vw;
+    width: 100%;
     position: fixed;
     bottom: 0;
-    margin: 0;
+    margin: 0 0 0 -10px;
     background-color: white;
-    box-shadow: 0 -12px 24px 0 rgba(46, 51, 51, 0.07);
+    box-shadow: 0 -12px 14px 0 rgba(46, 51, 51, 0.07);
     max-height: 80vh;
     overflow: hidden;
     overflow-y: auto;
+    border-radius: 0;
   }
 
   .cart-info {
